--- a/main.css
+++ b/main.css
@@ -127,9 +127,12 @@ p {
 /* Modal Content */
 .modal-content {
     position: fixed;
-    bottom: 0;
-    background-color: #fefefe;
-    width: 100%;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background-color: var(--text-color-light);
+    width: 85%;
+    max-width: 800px;
     -webkit-animation-name: slideIn;
     -webkit-animation-duration: 0.4s;
     animation-name: slideIn;
@@ -168,30 +171,6 @@ p {
 }
 
 /* Animations */
-@-webkit-keyframes slideIn {
-    from {
-        bottom: -300px;
-        opacity: 0
-    }
-
-    to {
-        bottom: 0;
-        opacity: 1
-    }
-}
-
-@keyframes slideIn {
-    from {
-        bottom: -300px;
-        opacity: 0
-    }
-
-    to {
-        bottom: 0;
-        opacity: 1
-    }
-}
-
 @-webkit-keyframes fadeIn {
     from {
         opacity: 0
@@ -271,4 +250,203 @@ p {
     .article{
         margin-left: 0px;
     }
+}
+
+@-webkit-keyframes {}
+
+@-webkit-keyframes extend {
+    0% {
+        width: 600px;
+        height: 200px;
+        border-radius: 100px;
+    }
+
+    10% {
+        width: 610px;
+        height: 210px;
+        background: #fff;
+        margin-left: - 5px;
+        margin-top: - 5px;
+    }
+
+    20% {
+        width: 600px;
+        height: 200px;
+        background: var(--accent);
+        margin-left: 0px;
+        margin-top: 0px;
+    }
+
+    100% {
+        width: 200px;
+        height: 200px;
+        border-radius: 100px;
+        margin-left: 190px;
+        background: var(--accent);
+    }
+}
+
+@keyframes extend {
+    0% {
+        width: 60%;
+        height: 20%;
+        border-radius: 100px;
+    }
+
+    10% {
+        width: 61%;
+        height: 21%;
+        background: #fff;
+        margin-left: - 5px;
+        margin-top: - 5px;
+    }
+
+    20% {
+        width: 60%;
+        height: 20%;
+        background: var(--accent);
+        margin-left: 0px;
+        margin-top: 0px;
+    }
+
+    100% {
+        width: 20%;
+        height: 20%;
+        border-radius: 100px;
+        margin-left: 190px;
+        background: var(--accent);
+    }
+}
+
+@-webkit-keyframes {}
+
+@-webkit-keyframes disappear {
+    0% {
+        opacity: 1;
+    }
+
+    20% {
+        color: #fff;
+    }
+
+    100% {
+        opacity: 0;
+    }
+}
+
+@keyframes disappear {
+    0% {
+        opacity: 1;
+    }
+
+    20% {
+        color: #fff;
+    }
+
+    100% {
+        opacity: 0;
+    }
+}
+
+@-webkit-keyframes {}
+
+@-webkit-keyframes appear {
+    0% {
+        opacity: 0;
+    }
+
+    70% {
+        opacity: 0;
+    }
+
+    100% {
+        opacity: 1;
+    }
+}
+
+@keyframes appear {
+    0% {
+        opacity: 0;
+    }
+
+    70% {
+        opacity: 0;
+    }
+
+    100% {
+        opacity: 1;
+    }
+}
+
+
+input,
+.share-btn,
+submit {
+    border: none
+}
+
+.cont {
+    position: absolute;
+    width: 610px;
+    height: 10px;
+    left: 50%;
+    top: 50%;
+    margin: -100px 0 0 -300px
+}
+
+.share-btn {
+    border-width: 1px;
+    width: 600px;
+    height: 200px;
+    border-radius: 100px;
+    background: var(--text-color-light);
+    position: absolute;
+    border: 5px solid var(--accent)
+}
+
+.share-btn>span {
+    font-size: 48px;
+    color: var(--accent)
+}
+
+.share-img {
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    margin: auto;
+    -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=0)";
+    filter: alpha(opacity=0);
+    opacity: 0
+}
+
+.share-btn:focus {
+    /*animation*/
+    -webkit-animation: extend 1s ease-in-out;
+    -ms-animation: extend 1s ease-in-out;
+    animation: extend 1s ease-in-out;
+    -webkit-animation-fill-mode: forwards;
+    /* Chrome, Safari, Opera */
+    animation-fill-mode: forwards
+}
+
+.share-btn:focus>span {
+    /*animation*/
+    -webkit-animation: disappear 1s ease-in-out;
+    -ms-animation: disappear 1s ease-in-out;
+    animation: disappear 1s ease-in-out;
+    -webkit-animation-fill-mode: forwards;
+    /* Chrome, Safari, Opera */
+    animation-fill-mode: forwards
+}
+
+.share-btn:focus>img {
+    /*animation*/
+    -webkit-animation: appear 1s ease-in-out;
+    -ms-animation: appear 1s ease-in-out;
+    animation: appear 1s ease-in-out;
+    -webkit-animation-fill-mode: forwards;
+    /* Chrome, Safari, Opera */
+    animation-fill-mode: forwards
 }
