--- a/main.css
+++ b/main.css
@@ -1,12 +1,12 @@
-:root{
+:root {
     --accent: #710117;
-    --pagne:#fdf6ef;
-    --silver:#54627B;
+    --pagne: #fdf6ef;
+    --silver: #54627B;
     --text-color-light: #FFFFFF;
     --text-color-dark: #000000;
 }
 
-html{
+html {
     background-color: var(--pagne);
 }
 
@@ -14,14 +14,15 @@ body {
     font-family: Arial, Helvetica, sans-serif;
     background-color: var(--text-color-light);
     max-width: 1250px;
-     margin: auto;
+    margin: auto;
 }
 
-h1, h2{
+h1,
+h2 {
     font-family: serif;
 }
 
-h1{
+h1 {
     margin-top: 0px;
     padding-top: 50px;
     font-size: 4vw;
@@ -29,37 +30,38 @@ h1{
     font-weight: bold;
 }
 
-h2{
+h2 {
     margin-top: 0%;
     font-size: 2vw;
-      font-weight: bold;
+    font-weight: bold;
 }
 
-.solid{
+.solid {
     border-top: 8px solid var(--accent);
     max-width: 1250px;
     width: 90%;
 }
 
-.flex-box{
+.flex-box {
     width: 90%;
     max-width: 1250px;
     display: grid;
     grid-template-columns: 45% 55%;
     margin: auto;
     border-bottom: 3px solid var(--silver);
-  margin-bottom: 1%;
-  padding-top: 5%;
+    margin-bottom: 1%;
+    padding-top: 5%;
 }
 
 
 
-img, .container{
-    width: 100%; 
+img,
+.container {
+    width: 100%;
     max-width: 500px;
 }
 
-.article{
+.article {
     margin-left: 20px;
 }
 
@@ -67,7 +69,7 @@ p {
     line-height: 30px;
 }
 
-.myBtn{
+.myBtn {
     width: 100%;
     max-width: 500px;
 }
@@ -84,7 +86,7 @@ p {
     transition: 0.5s;
     background-size: 200% auto;
     color: white;
-    box-shadow: 0 0 20px #eee;
+    border-style: none;
     border-radius: 10px;
     display: block;
 }
@@ -110,6 +112,7 @@ p {
     width: 100%;
     /* Full width */
     height: 100%;
+    text-align: center;
     /* Full height */
     overflow: auto;
     /* Enable scroll if needed */
@@ -141,23 +144,27 @@ p {
 
 /* The Close Button */
 .close {
-    color: white;
+    color: var(--silver);
     float: right;
     font-size: 28px;
     font-weight: bold;
+    transition: 0.2s;
 }
 
 .close:hover,
 .close:focus {
-    color: #000;
+    color: var(--text-color-dark);
     text-decoration: none;
     cursor: pointer;
 }
 
 .modal-header {
-    padding: 2px 16px;
-    background-color: #5cb85c;
-    color: white;
+    padding: 10px 16px;
+    background-color: var(--text-color-light);
+    color: var(--text-color-dark);
+}
+.modal-header h2{
+    padding-top: 30px;
 }
 
 .modal-body {
@@ -166,8 +173,18 @@ p {
 
 .modal-footer {
     padding: 2px 16px;
-    background-color: #5cb85c;
-    color: white;
+    background-color: var(--text-color-light);
+    padding: 30px 2px;
+}
+
+.share-btn {
+    margin: auto;
+
+}
+
+.share-btn:active {
+    transition: 0s;
+    transform: translateY(2px);
 }
 
 /* Animations */
@@ -247,206 +264,13 @@ p {
         margin-top: 15px;
 
     }
-    .article{
+
+    .article {
         margin-left: 0px;
     }
-}
 
-@-webkit-keyframes {}
-
-@-webkit-keyframes extend {
-    0% {
-        width: 600px;
-        height: 200px;
-        border-radius: 100px;
+    .btn-grad{
+        margin-left: auto;
+        margin-right: auto;
     }
-
-    10% {
-        width: 610px;
-        height: 210px;
-        background: #fff;
-        margin-left: - 5px;
-        margin-top: - 5px;
-    }
-
-    20% {
-        width: 600px;
-        height: 200px;
-        background: var(--accent);
-        margin-left: 0px;
-        margin-top: 0px;
-    }
-
-    100% {
-        width: 200px;
-        height: 200px;
-        border-radius: 100px;
-        margin-left: 190px;
-        background: var(--accent);
-    }
-}
-
-@keyframes extend {
-    0% {
-        width: 60%;
-        height: 20%;
-        border-radius: 100px;
-    }
-
-    10% {
-        width: 61%;
-        height: 21%;
-        background: #fff;
-        margin-left: - 5px;
-        margin-top: - 5px;
-    }
-
-    20% {
-        width: 60%;
-        height: 20%;
-        background: var(--accent);
-        margin-left: 0px;
-        margin-top: 0px;
-    }
-
-    100% {
-        width: 20%;
-        height: 20%;
-        border-radius: 100px;
-        margin-left: 190px;
-        background: var(--accent);
-    }
-}
-
-@-webkit-keyframes {}
-
-@-webkit-keyframes disappear {
-    0% {
-        opacity: 1;
-    }
-
-    20% {
-        color: #fff;
-    }
-
-    100% {
-        opacity: 0;
-    }
-}
-
-@keyframes disappear {
-    0% {
-        opacity: 1;
-    }
-
-    20% {
-        color: #fff;
-    }
-
-    100% {
-        opacity: 0;
-    }
-}
-
-@-webkit-keyframes {}
-
-@-webkit-keyframes appear {
-    0% {
-        opacity: 0;
-    }
-
-    70% {
-        opacity: 0;
-    }
-
-    100% {
-        opacity: 1;
-    }
-}
-
-@keyframes appear {
-    0% {
-        opacity: 0;
-    }
-
-    70% {
-        opacity: 0;
-    }
-
-    100% {
-        opacity: 1;
-    }
-}
-
-
-input,
-.share-btn,
-submit {
-    border: none
-}
-
-.cont {
-    position: absolute;
-    width: 610px;
-    height: 10px;
-    left: 50%;
-    top: 50%;
-    margin: -100px 0 0 -300px
-}
-
-.share-btn {
-    border-width: 1px;
-    width: 600px;
-    height: 200px;
-    border-radius: 100px;
-    background: var(--text-color-light);
-    position: absolute;
-    border: 5px solid var(--accent)
-}
-
-.share-btn>span {
-    font-size: 48px;
-    color: var(--accent)
-}
-
-.share-img {
-    position: absolute;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    margin: auto;
-    -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=0)";
-    filter: alpha(opacity=0);
-    opacity: 0
-}
-
-.share-btn:focus {
-    /*animation*/
-    -webkit-animation: extend 1s ease-in-out;
-    -ms-animation: extend 1s ease-in-out;
-    animation: extend 1s ease-in-out;
-    -webkit-animation-fill-mode: forwards;
-    /* Chrome, Safari, Opera */
-    animation-fill-mode: forwards
-}
-
-.share-btn:focus>span {
-    /*animation*/
-    -webkit-animation: disappear 1s ease-in-out;
-    -ms-animation: disappear 1s ease-in-out;
-    animation: disappear 1s ease-in-out;
-    -webkit-animation-fill-mode: forwards;
-    /* Chrome, Safari, Opera */
-    animation-fill-mode: forwards
-}
-
-.share-btn:focus>img {
-    /*animation*/
-    -webkit-animation: appear 1s ease-in-out;
-    -ms-animation: appear 1s ease-in-out;
-    animation: appear 1s ease-in-out;
-    -webkit-animation-fill-mode: forwards;
-    /* Chrome, Safari, Opera */
-    animation-fill-mode: forwards
 }
